--- a/src/app/user/show-user/show-user.component.html
+++ b/src/app/user/show-user/show-user.component.html
@@ -327,8 +327,8 @@
                         <tr *ngFor="let x of schedules" [ngClass]="{ scheduleInactive: !x.active }">
                             <!-- <ng-container *ngIf="x.active"> -->
                             <th>{{ x.dayView }}</th>
-                            <th>{{ x.check_in }}</th>
-                            <th>{{ x.check_out }}</th>
+                            <th>{{ x.check_in | time }}</th>
+                            <th>{{ x.check_out | time }}</th>
                             <!-- </ng-container> -->
                         </tr>
                     </tbody>
