--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -29,7 +29,7 @@
                 <td *ngIf="user.user_type_id == 1">Alumno</td>
                 <td *ngIf="user.user_type_id == 2">Maestro</td>
                 <td *ngIf="user.user_type_id == 3">Cajero</td>
-                <td *ngIf="user.user_type_id == 4">Escritor</td>
+                <td *ngIf="user.user_type_id == 4">Contador</td>
                 <td *ngIf="user.user_type_id == 5">S Escritor</td>
                 <td *ngIf="user.user_type_id == 6">Administrador</td>
 
