--- a/src/app/workers-payment/workers-payment.component.html
+++ b/src/app/workers-payment/workers-payment.component.html
@@ -6,15 +6,18 @@
                 <th>ID</th>
                 <th class="left">Trabajador</th>
                 <th>Monto</th>
-
+                <th>Periodo</th>
+                <th>Status</th>
             </tr>
             <!-- <th colspan="3">Opciones</th> -->
         </thead>
         <tbody>
-            <tr *ngFor="let payment of payments" [routerLink]="['/pago-trabajadores/show', payment.id]">
+            <tr *ngFor="let payment of payments" [routerLink]="['/pago-trabajadores/show', payment.id]" (click)="sendPayment(payment)">
                 <td>{{ payment.id }}</td>
                 <td class="left">{{ payment.user.name }}</td>
                 <td>{{ payment.amount }}</td>
+                <td>{{ payment.date_from }} / {{ payment.date_to }}</td>
+                <td>{{ payment.statusView() }}</td>
             </tr>
         </tbody>
     </table>
