improve visual and logic analize

--- a/src/app/workers-payment/payment-create/payment-create.component.css
+++ b/src/app/workers-payment/payment-create/payment-create.component.css
@@ -9,3 +9,12 @@
 tbody>tr {
     background: rgb(188, 255, 188);
 }
+
+.daysIcons {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.daysIcons div {
+    cursor: pointer;
+}
