--- a/src/app/workers-payment/payment-create/payment-create.component.html
+++ b/src/app/workers-payment/payment-create/payment-create.component.html
@@ -9,7 +9,12 @@
     </div>
 
     <div class="cardModule" [@card]="state.card">
-        <h2>Crear pagos</h2>
+
+        <h2><a (click)="window = 1">Crear pagos </a>
+            <span *ngIf="window > 1" (click)="window = 2">>> Analisis </span>
+            <span *ngIf="window > 2" (click)="window = 3">>> Pagos</span>
+        </h2>
+
         <form autocomplete="off" (submit)="setDataToProcess()" [ngClass]="{ 'loadingForm': sendingData > 0}" *ngIf="window == 1">
 
             <div>
@@ -25,7 +30,7 @@
                     <option  *ngFor="let x of periodOptions" value="{{ x.value }}">{{ x.from}} - {{ x.to }}</option>
                 </select>
             </div>
-            <button type="submit" class="btn btnAccept">Comenzar</button>
+            <button type="submit" class="btn">Comenzar</button>
 
         </form>
 
@@ -35,18 +40,31 @@
 
                 <h4>Periodo {{ period.from }} / {{ period.to }}</h4>
 
-                <button (click)="changeWorkToAnalize(-1)">Regresar</button>
-                <button *ngIf="users[userSelect].salary != undefined && analizedArray[userSelect].payment.id == null" (click)="generateReceipt()">Generar Recibo</button>
+                <div class="options">
+                    <i class="material-icons" *ngIf="users[userSelect - 1] != undefined" (click)="changeWorkToAnalize(-1)" matTooltip="Anterior empleado">arrow_back</i>
+                    <i class="material-icons" *ngIf="users[userSelect + 1] != undefined" (click)="changeWorkToAnalize(1)" matTooltip="Siguiente empleado">arrow_forward</i>
+                    <i class="material-icons green-text" *ngIf="users[userSelect].salary != undefined && analizedArray[userSelect].payment.id == null" (click)="generateReceipt()" matTooltip="Generar Recibo">receipt</i>
+                    <i class="material-icons blue-text" *ngIf="users[userSelect + 1] != undefined" (click)="changeWorkToAnalize(1)" matTooltip="Analisis Completo">playlist_add_check</i>
+                </div>
 
+                <p>{{ users[userSelect].name }}</p>
+                <div class="flexRow" *ngIf="users[userSelect].salary != undefined ">
+                    <div class="l12 daysIcons">
+                        <div *ngIf="analizedArray[userSelect].daysLate > 0" matTooltip="Días con retraso">
+                            <i class="material-icons orange-text">watch_later</i> {{ analizedArray[userSelect].daysLate }}
+                        </div>
+                        <div *ngIf="analizedArray[userSelect].daysAbsent > 0" matTooltip="Días de inasistencia">
+                            <i class="material-icons red-text">warning</i> {{ analizedArray[userSelect].daysAbsent }}
+                        </div>
+                    </div>
+                    <p class="l6">Tipo de Pago: {{ users[userSelect].salary.returnSalaryView() }}</p>
+                    <p class="l6">Monto: ${{ users[userSelect].salary.amount }} - Bono: ${{ users[userSelect].salary.bonus }}</p>
+                    <p class="l6">Pago Sugerido: ${{ analizedArray[userSelect].paymentSugest }}</p>
+                    <div class="formData l6">
+                        <span>Pago:</span><br>
+                        <input [(ngModel)]="analizedArray[userSelect].paymentReal" name="paymentReal">
+                    </div>
 
-                <p>Trabajador: {{ users[userSelect].name }}</p>
-                <div *ngIf="users[userSelect].salary != undefined ">
-                    <p *ngIf="analizedArray[userSelect].daysLate > 0" matTooltip="Días con retraso"><i class="material-icons">watch_later</i> {{ analizedArray[userSelect].daysLate }}</p>
-                    <p *ngIf="analizedArray[userSelect].daysAbsent > 0" matTooltip="Días de inasistencia"><i class="material-icons">warning</i> {{ analizedArray[userSelect].daysAbsent }}</p>
-                    <p>Tipo de Pago: {{ users[userSelect].salary.returnSalaryView() }}</p>
-                    <p>Monto: ${{ users[userSelect].salary.amount }} - Bono: ${{ users[userSelect].salary.bonus }}</p>
-                    <p>Pago Sugerido: ${{ analizedArray[userSelect].paymentSugest }}</p>
-                    <input [(ngModel)]="analizedArray[userSelect].paymentReal" name="paymentReal">
                 </div>
 
                 <div class="responsive-table">
@@ -69,7 +87,7 @@
                         </tbody>
                     </table>
                 </div>
-                <button *ngIf="users[userSelect + 1] != undefined" (click)="changeWorkToAnalize(1)" class="btn btnPrimary"> Continuar</button>
+                <button *ngIf="users[userSelect + 1] != undefined" (click)="changeWorkToAnalize(1)" class="btn btnPrimary"> Siguiente Empleado</button>
             </div>
         </div>
 
